update before change db
