# src/routes/job.route.js
@@ -3,7 +3,7 @@ import * as jobC from "../controllers/job.controller.js";
 
 const router = express.Router();
 
-router.get("/", jobC.chkCart);
+router.post("/search", jobC.searchJob);
 // router.post("/", jobC.createUser);
 
 export default router;
